2002-12-30  Jody Goldberg <jody@gnome.org>

	Apply
	http://bugzilla.gnome.org/show_bug.cgi?id=101752

	* gnome-theme-details.c : Merge in Frederic's patch.
	* gnome-theme-details.c : ditto.

2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-details.c: (path_to_theme_id), (load_theme_names),
	(gnome_theme_details_reread_themes_from_disk):

	Use the theme directory name rather than the "printable" name
	for icon themes. Does this need to be done for WM themes and
	GTK themes as well?
	
2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (update_themes_from_disk):

	Fix crash when current WM isn't detected.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

Fri Dec  6 16:54:14 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-save-data.c: New file.  Really saves now.  Doesn't
	notice when a new metatheme is added, though.

Tue Dec  3 20:45:17 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-save.c: Add saving support.  Almost to a working
	point w/ this capplet...

Tue Dec  3 14:26:05 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-details.c (window_theme_selection_changed): Fix
	g_assert_not_reached() that can be reached.

Tue Dec  3 00:40:13 2002  Jonathan Blandford  <jrb@gnome.org>

	* .cvsignore: shut up, CVS

	* Makefile.am: build new objects

	* gnome-theme-details.[ch]: New file to encapsulate the details
	dialog.

	* gnome-theme-manager.c: Restructure code.  Less love, more work.
	Prolly an improvement.

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

Sat Nov 16 00:55:58 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (meta_theme_selection_changed): actually
	set the theme.

Thu Nov 14 19:30:02 2002  Jonathan Blandford  <jrb@gnome.org>

	* theme-thumbnail.c (setup_theme_thumbnail_factory): add G_IO_HUP
	so the child can actually exit when the parent does.

Thu Nov 14 17:14:00 2002  Jonathan Blandford  <jrb@gnome.org>
