@@ -1,3 +1,11 @@
+2002-12-31  Seth Nickell  <snickell@stanford.edu>
+
+	* theme-thumbnail.c: (create_image):
+
+	Thumbnail for themes (most currently) that use
+	"gnome-fs-directory" as the icon name for folders rather
+	than "folder".
+
 2002-12-30  Jody Goldberg <jody@gnome.org>
 
 	Apply
